force-app/main/default/objects/Opportunity/fields/AWU_Consumed__c.field-meta.xml
<CustomField>
    <fullName>AWU_Consumed__c</fullName>
    <description>Actual Agentic Work Units (AWU) consumed against the monthly commit. Population mechanism (manual / scheduled Flow / integration) is pending decision R-3; field is created now so downstream layouts and automations can reference it.</description>
    <inlineHelpText>AWU realmente consumidas contra el compromiso mensual. Base para medir la penetración de uso y habilitar la expansión.</inlineHelpText>
    <label>AWU Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>