force-app/main/default/objects/Opportunity/fields/AWU_Monthly_Commit__c.field-meta.xml
<CustomField>
    <fullName>AWU_Monthly_Commit__c</fullName>
    <description>Contractual minimum monthly Agentic Work Units (AWU) the customer commits to. This commit unlocks the lower Per-AWU Rate. Core field of the Committed-Spend Opportunity.</description>
    <label>AWU Monthly Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>