force-app/main/default/objects/Opportunity/fields/Commit_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Eligible_Date__c</fullName>
    <description>Date from which the account becomes eligible to convert PAYG usage into a Committed-Spend contract. Used to time the Committed-Spend motion.</description>
    <label>Commit Eligible Date</label>
    <type>Date</type>
</CustomField>