force-app/main/default/objects/Opportunity/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Close-stage fulfillment gate (Negotiation and Close). Checked when the signed agreement is on file. Enforced at 6. Closed Won on RT LAND by LAND_Close_Requires_Fulfillment (INACTIVE). Activation by Nic via Security and Access.</description>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>