force-app/main/default/objects/Opportunity/fields/First_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Date__c</fullName>
    <description>First substantive meeting or call with this investor.</description>
    <label>First Meeting Date</label>
    <type>Date</type>
</CustomField>