force-app/main/default/objects/Opportunity/fields/Funding_Round__c.field-meta.xml
<CustomField>
    <fullName>Funding_Round__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Funding Round this investor outreach belongs to. Required on Investor Outreach Record Type via validation rule.</description>
    <label>Funding Round</label>
    <referenceTo>Funding_Round__c</referenceTo>
    <relationshipLabel>Investor Outreach Opportunities</relationshipLabel>
    <relationshipName>Investor_Outreach_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>