force-app/main/default/objects/Opportunity/fields/Intro_Via__c.field-meta.xml
<CustomField>
    <fullName>Intro_Via__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Connector contact who made the warm introduction for this opportunity.</description>
    <label>Intro Via</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities Introduced</relationshipLabel>
    <relationshipName>Opportunities_Introduced</relationshipName>
    <type>Lookup</type>
</CustomField>