force-app/main/default/objects/Opportunity/fields/Investment_Ask__c.field-meta.xml
<CustomField>
    <fullName>Investment_Ask__c</fullName>
    <description>Target check size we are asking for from this investor.</description>
    <label>Investment Ask</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>