force-app/main/default/objects/Opportunity/fields/Investment_Committed__c.field-meta.xml
<CustomField>
    <fullName>Investment_Committed__c</fullName>
    <description>Amount this investor has verbally or contractually committed.</description>
    <label>Investment Committed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>