force-app/main/default/objects/Opportunity/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAFE</fullName>
                <default>true</default>
                <label>SAFE</label>
            </value>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>Priced Equity</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>