force-app/main/default/objects/Opportunity/fields/Is_Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Investor</label>
    <type>Checkbox</type>
</CustomField>