force-app/main/default/objects/Opportunity/fields/kognoz1__Invoice2_Template__c.field-meta.xml
<CustomField>
    <fullName>kognoz1__Invoice2_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template</label>
    <referenceTo>kognoz1__Invoice2_Template__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>