force-app/main/default/objects/Opportunity/fields/Partner_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Meeting_Date__c</fullName>
    <description>Date of the partner meeting or Investment Committee review for this investor. Tracked as a date rather than a separate stage to keep the funnel clean.</description>
    <label>Partner Meeting / IC Date</label>
    <type>Date</type>
</CustomField>