force-app/main/default/objects/Opportunity/fields/PAYG_Paid__c.field-meta.xml
<CustomField>
    <fullName>PAYG_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Close-stage fulfillment gate (Negotiation and Close). Checked when the initial PAYG (pay-as-you-go) invoice has been paid. Enforced at 6. Closed Won on RT LAND by LAND_Close_Requires_Fulfillment (INACTIVE). Activation by Nic via Security and Access.</description>
    <label>PAYG Paid</label>
    <type>Checkbox</type>
</CustomField>