force-app/main/default/objects/Opportunity/fields/Penetration_Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Penetration_Checkpoint__c</fullName>
    <description>Usage penetration checkpoint that gates the Expansion motion. When Met, the account is eligible to spawn an Expansion Opportunity. Trigger automation is deferred pending decision R-3.</description>
    <label>Penetration Checkpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Met</fullName>
                <default>true</default>
                <label>Not Met</label>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>