force-app/main/default/objects/Opportunity/fields/Per_AWU_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_AWU_Rate__c</fullName>
    <description>Contracted price per Agentic Work Unit (AWU) on this Opportunity. Committed-Spend deals unlock a lower per-AWU rate against a contractual monthly minimum.</description>
    <label>Per-AWU Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>