force-app/main/default/objects/Opportunity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason this investor declined. Required when Stage is Closed Lost.</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage Fit</fullName>
            </value>
            <value>
                <fullName>Check Size</fullName>
            </value>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Competitive Conflict</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>