force-app/main/default/objects/Opportunity/fields/Round_Fit__c.field-meta.xml
<CustomField>
    <fullName>Round_Fit__c</fullName>
    <description>Round-relative priority for this fund on this specific round. Auto-populated from the spreadsheet Tier at import. Editable per Opportunity.</description>
    <label>Round Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong Match</fullName>
            </value>
            <value>
                <fullName>Partial Match</fullName>
            </value>
            <value>
                <fullName>Stretch</fullName>
            </value>
            <value>
                <fullName>Not This Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>