force-app/main/default/objects/Opportunity/fields/Salesforce_PL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_PL__c</fullName>
    <label>Salesforce PL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>