force-app/main/default/objects/Opportunity/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-referential lookup linking a lifecycle Opportunity (Committed-Spend or Expansion) back to the Opportunity it was spawned from (LAND -&gt; Committed-Spend -&gt; Expansion). Populated by the lifecycle Flow.</description>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Opportunities</relationshipLabel>
    <relationshipName>Child_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>