force-app/main/default/objects/Opportunity/fields/Term_Sheet_Received__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Sheet Received</label>
    <type>Checkbox</type>
</CustomField>