force-app/main/default/objects/Opportunity/fields/Users_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Users_Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Close-stage fulfillment gate (Negotiation and Close). Checked when the customer users/licenses have been provisioned. Enforced at 6. Closed Won on RT LAND by LAND_Close_Requires_Fulfillment (INACTIVE). Activation by Nic via Security and Access.</description>
    <label>Users Provisioned</label>
    <type>Checkbox</type>
</CustomField>