force-app/main/default/objects/Opportunity/fields/Valuation_Cap__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Cap__c</fullName>
    <description>Valuation cap on this specific SAFE or Note. Usually inherits from Funding Round but can be negotiated per investor.</description>
    <label>Valuation Cap</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>