force-app/main/default/objects/Opportunity/recordTypes/Committed_Spend.recordType-meta.xml
<RecordType>
    <fullName>Committed_Spend</fullName>
    <active>true</active>
    <businessProcess>Committed_Spend_Process</businessProcess>
    <description>Committed-Spend Opportunity (signed contractual minimum monthly AWU spend at a lower per-AWU rate). Spawned via lifecycle Flow from a won LAND Opportunity. Stage set PROVISIONAL pending OQ-009.</description>
    <label>Committed-Spend</label>
</RecordType>