force-app/main/default/objects/Opportunity/recordTypes/Customer_Standard.recordType-meta.xml
<RecordType>
    <fullName>Customer_Standard</fullName>
    <active>true</active>
    <businessProcess>Customer_Sales</businessProcess>
    <description>Standard customer sales Opportunity. Uses the existing 9-stage customer sales funnel.</description>
    <label>Customer Sales</label>
</RecordType>