force-app/main/default/objects/Opportunity/recordTypes/Expansion.recordType-meta.xml
<RecordType>
    <fullName>Expansion</fullName>
    <active>true</active>
    <businessProcess>Expansion_Process</businessProcess>
    <description>Expansion Opportunity (developer/services tier), triggered when the usage Penetration Checkpoint is Met. Expansion auto-trigger and AWU_Consumed__c write-back DEFERRED pending R-3. Stage set PROVISIONAL pending OQ-009.</description>
    <label>Expansion</label>
</RecordType>