force-app/main/default/objects/Opportunity/recordTypes/Investor_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Investor_Outreach</fullName>
    <active>true</active>
    <businessProcess>Investor_Funnel</businessProcess>
    <description>One Opportunity per investor fund per funding round. Uses the 7-stage Investor Funnel.</description>
    <label>Investor Outreach</label>
</RecordType>