force-app/main/default/objects/Opportunity/recordTypes/LAND.recordType-meta.xml
<RecordType>
    <fullName>LAND</fullName>
    <active>true</active>
    <businessProcess>LAND_Sales_Process</businessProcess>
    <description>LAND new-business acquisition Opportunity (first deal). Stage set PROVISIONAL pending OQ-009 Solution Design with Nic.</description>
    <label>LAND</label>
</RecordType>