force-app/main/default/objects/Opportunity/validationRules/LAND_Close_Requires_Approvals.validationRule-meta.xml
<ValidationRule>
    <fullName>LAND_Close_Requires_Approvals</fullName>
    <active>false</active>
    <description>INACTIVE. LAND close approval gate: at 6. Closed Won requires Legal Reviewed and Finance Approved. Lightweight checkbox gate (per Quoting D-1); a 1-step ApprovalProcess can replace it for SOC 2 later. Stage provisional (OQ-009). Activation by Nic.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = 'LAND',
    ISPICKVAL(StageName, '6. Closed Won'),
    OR(
        NOT(Legal_Reviewed__c),
        NOT(Finance_Approved__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Legal_Reviewed__c</errorDisplayField>
    <errorMessage>Antes de marcar Closed Won en una oportunidad LAND, se requieren las aprobaciones de cierre: Revision Legal (Legal Reviewed) y Aprobacion de Finanzas (Finance Approved).</errorMessage>
</ValidationRule>