force-app/main/default/objects/Opportunity/validationRules/LAND_Close_Requires_Commit_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>LAND_Close_Requires_Commit_Terms</fullName>
    <active>false</active>
    <description>INACTIVE (active=false, Lead precedent). LAND close gate: at 6. Closed Won require Per_AWU_Rate__c and Commit_Eligible_Date__c to seed a clean Committed-Spend. Field list provisional pending OQ-009. Activation by Nic via Security and Access.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = 'LAND',
    ISPICKVAL(StageName, '6. Closed Won'),
    OR(
        ISBLANK(Per_AWU_Rate__c),
        ISBLANK(Commit_Eligible_Date__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Per_AWU_Rate__c</errorDisplayField>
    <errorMessage>Antes de marcar Closed Won en una oportunidad LAND, completa la Tarifa por AWU (Per_AWU_Rate__c) y la Fecha Elegible de Commit (Commit_Eligible_Date__c). Estos terminos alimentan la oportunidad Committed-Spend.</errorMessage>
</ValidationRule>