force-app/main/default/objects/Opportunity/validationRules/LAND_Loss_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LAND_Loss_Reason_Required</fullName>
    <active>false</active>
    <description>INACTIVE. LAND loss-capture gate: Loss Reason required when a LAND Opp moves to a non-won closed stage (Closed Lost, Dead - No Decision, Dead - No Opportunity). Mirrors investor loss-reason pattern. Stage provisional (OQ-009). Activation by Nic.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = 'LAND',
    OR(
        ISPICKVAL(StageName, '6. Closed Lost'),
        ISPICKVAL(StageName, '6. Dead - No Decision'),
        ISPICKVAL(StageName, '6. Dead - No Opportunity')
    ),
    ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Indica el Motivo de Perdida (Loss Reason) al cerrar una oportunidad LAND como perdida o dead. Esto genera el rastro de auditoria de perdidas.</errorMessage>
</ValidationRule>